update heading text

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="main-banner">
                 <img src="" alt="">
                 <h2 class="text">
-                    We Provide Cost-Efficient Strategy<br/>Lead Design & Web Development Services
+                    We Provide Cost-Efficient Strategy<br/>Led Design & Web Development Services
                 </h2>
             </div>
 
